# embedded_rust

./: README.md
01-core_only/: Cargo.toml
02-core_only_faulty/: Cargo.toml
03-blinky_pac/: Cargo.toml
03-blinky_pac/.cargo/: config.toml
04-blinky/: Cargo.toml
05-adc/: memory.x
06-spi/: Cargo.toml
blinky/: Cargo.toml
blinky/.cargo/: config.toml
can/: Cargo.toml  memory.x
can/.cargo/: config-a
spi/: Cargo.toml
spi/.cargo/: config.toml
