[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.5"
panic-probe = {version="0.3.2", features= ["print-defmt"]}
defmt = "0.3.8"
defmt-rtt = "0.4"


[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]

[dependencies.stm32f4xx-hal]
version = "0.22.1"

# Pick your controller:
#features = ["stm32f446"]
features = ["stm32f401"]
