[package]
name = "can_send"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
nb = "1"
cortex-m-rt = "0.7"
panic-probe = {version="0.3", features= ["print-defmt"]}
defmt = "0.3.6"
defmt-brtt = {version = "0.1", features = ["rtt"]}
bxcan = { version = "0.7.0", features = ["unstable-defmt"] } # CAN driver


[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]

[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f446","can",]
# features = ["stm32f401"]
